<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <compass.version>1.0.0</compass.version>
    </properties>

    <name>Uncle-T</name>
    <description>Uncle-T</description>
    <groupId>ch.oliumbi</groupId>
    <artifactId>unclet</artifactId>
    <version>developement</version>

    <repositories>
        <repository>
            <id>compass</id>
            <name>compass</name>
            <url>https://maven.pkg.github.com/OliUmbi/compass</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>ch.oliumbi.compass</groupId>
            <artifactId>core</artifactId>
            <version>${compass.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.oliumbi.compass</groupId>
            <artifactId>server</artifactId>
            <version>${compass.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.oliumbi.compass</groupId>
            <artifactId>ui</artifactId>
            <version>${compass.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- todo remove asap -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>ch.oliumbi.unclet.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>sudo
    </build>
</project>
